made react-tap-event-plugin npm a peerDependency

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   },
   "dependencies": {
     "jsonp": "^0.2.0",
-    "react-tap-event-plugin": "^0.2.2",
     "youtube-finder": "^1.0.0"
   },
   "peerDependencies": {
     "react": "0.14.x",
-    "material-ui": "^0.14.4"
+    "material-ui": "^0.14.4",
+    "react-tap-event-plugin": "^0.2.2"
   },
   "devDependencies": {
     "nwb": "0.7.x",
