--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "dependencies": {
     "jsonp": "^0.2.0",
+    "material-ui": "^0.15.0",
     "youtube-finder": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^15.0.0",
-    "material-ui": "^0.15.0-alpha.2",
     "react-tap-event-plugin": "^0.2.2"
   },
   "devDependencies": {
