add repo link in package.json
useful on npmjs.org :)

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "author": "",
   "homepage": "",
   "license": "MIT",
-  "repository": "",
+  "repository": "https://github.com/hackingbeauty/material-ui-youtube-autocomplete",
   "keywords": [
     "react-component"
   ]
